# rslug

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  Release.yml
src/: lib.rs  main.rs
