[package]
name = "rslug"
version = "0.1.1"
edition = "2024"
authors = ["Ezra Natanael <ezrantn@proton.me>"]

description = "A simple, fast, and configurable library to create URL-friendly slugs from strings."
readme = "README.md"
repository = "https://github.com/ezrantn/rslug"
license = "MIT"
keywords = ["slug", "slugify", "url", "text", "unicode"]
categories = ["text-processing"]

[dependencies]
any_ascii = "0.3.3"
